force-app/main/default/objects/Laundry_Order__c/Laundry_Order__c.object-meta.xml
<CustomObject>
    <label>Laundry Order</label>
    <pluralLabel>Laundry Orders</pluralLabel>
    
    <nameField>
        <displayFormat>LO-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>