force-app/main/default/objects/Laundry_Order__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignedTo</relationshipName>

</CustomField>