force-app/main/default/objects/Laundry_Order__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Lookup</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipName>LBranch</relationshipName>

</CustomField>