force-app/main/default/objects/Laundry_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>LCustomer</relationshipName>

</CustomField>