force-app/main/default/objects/Laundry_Order__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <label>Final Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>IF( ISBLANK(Total_Amount__c), 0, Total_Amount__c ) - IF( ISBLANK(Discount_Amount__c), 0, Discount_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final Amount = Total Amount - Discount Amount</inlineHelpText>

</CustomField>