force-app/main/default/objects/Laundry_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <type>AutoNumber</type>
    <displayFormat>ORD-{0000}</displayFormat>

</CustomField>