force-app/main/default/objects/Laundry_Order__c/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <label>Pickup Date</label>
    <type>DateTime</type>
</CustomField>