force-app/main/default/objects/Laundry_Order__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Standard</fullName></value>
        <value><fullName>Express</fullName></value>
        <value><fullName>Same-Day</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>