force-app/main/default/objects/Laundry_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Draft</fullName></value>
        <value><fullName>Confirmed</fullName></value>
        <value><fullName>Picked Up</fullName></value>
        <value><fullName>In Progress</fullName></value>
        <value><fullName>Ready</fullName></value>
        <value><fullName>Out for Delivery</fullName></value>
        <value><fullName>Delivered</fullName></value>
        <value><fullName>Cancelled</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>